# congenial-octo-funicular

./: .gitignore  CMakeLists.txt  ProjectDependencies.cmake  ProjectOptions.cmake  _clang-format  gcovr.cfg
cmake/: ClangTidy.cmake  CompilerWarnings.cmake  Coverage.cmake  PreventInSourceBuilds.cmake  Utilities.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  var.lox
sources/: CMakeLists.txt
sources/tools/: CMakeLists.txt
sources/tools/cpp_generator/: CMakeLists.txt
sources/tools/cpp_generator/src/: class_builder.cpp  code_generator.cpp  cpp_generator.cpp  printable.cpp
sources/tools/cpp_generator/test/: CMakeLists.txt  t_baz.cpp
sources/tools/grammar_generator/: CMakeLists.txt
sources/tools/grammar_generator/src/: grammar.hpp  grammar_compiler.hpp  main.cpp  tree.hpp
sources/tools/grammar_generator/src/cli/: command.cpp  command.hpp  generate_command.cpp  generate_command.hpp  main_command.cpp  main_command.hpp
sources/tools/grammar_generator/src/generator/: cxx_rule_generator.cpp  cxx_rule_generator.hpp  type_checker.cpp  type_checker.hpp
sources/tools/grammar_generator/src/grammar/: grammar.cpp  grammar.hpp  grammar_compiler.hpp
sources/tools/grammar_generator/src/ts/: parser.hpp
sources/tools/grammar_grammar_generator/: Cargo.toml
sources/tools/grammar_grammar_generator/src/: gen.rs  main.rs  ty.rs
sources/tools/grammar_grammar_generator/src/ty/: field.rs  type.rs  type_registry.rs
sources/tools/grammar_grammar_generator_v2/: Cargo.toml
sources/tools/grammar_grammar_generator_v2/src/: error.rs  main.rs
sources/tools/grammar_grammar_generator_v2/src/check/: lookup_pass.rs  mod.rs
sources/tools/grammar_grammar_generator_v2/src/node_types/: mod.rs  type_decl.rs
sources/tools/grammar_grammar_generator_v2/src/types/: element.rs  mod.rs  registry.rs  type.rs
sources/tools/grammar_grammar_generator_v3/: .gitignore  Cargo.toml
sources/tools/grammar_grammar_generator_v3/src/: args.rs  cpp.rs  main.rs  node_types.rs
sources/tools/grammar_grammar_generator_v3/src/types/: convert.rs  gen.rs  mod.rs
sources/tools/grammar_grammar_generator_v4/: Cargo.toml
sources/tools/grammar_grammar_generator_v4/src/: lib.rs  main.rs
sources/tools/grammar_grammar_generator_v4/src/cpp/: class.rs  function.rs  mod.rs  type.rs  variable.rs
sources/tools/grammar_grammar_generator_v4/src/cpp_generator/: class.rs  function.rs  mod.rs  type.rs  variable.rs
sources/tools/grammar_grammar_generator_v5/: Cargo.toml
sources/tools/grammar_grammar_generator_v5/src/: lib.rs  main.rs
sources/tools/grammar_grammar_generator_v5/src/cpp/: class.rs  function.rs  mod.rs  type.rs  variable.rs
sources/tools/grammar_grammar_generator_v5/src/generator/: mod.rs
sources/tools/metamodel/: Cargo.toml
sources/tools/metamodel/cpp_generator/: Cargo.toml
sources/tools/metamodel/cpp_generator/src/: cpp.rs  lib.rs  template_functions.rs
sources/tools/metamodel/cpp_generator/templates/: class_decl.hpp  class_decl_macros.hpp  class_def.cpp  class_def_macros.cpp
sources/tools/metamodel/example/: package.mml  point.hpp
sources/tools/metamodel/model/: Cargo.toml
sources/tools/metamodel/model/src/: class.rs  function.rs  lib.rs  package.rs  type.rs  variable.rs
sources/tools/metamodel/test_main/: Cargo.toml
sources/tools/metamodel/test_main/src/: main.rs
sources/tools/metamodel/test_main/templates/: class.hpp  class_macros.txt
sources/tools/tree-sitter-grammar/: .gitignore  lox.grammar  lox.grammar2  package-lock.json
sources/tree_walk_interpreter/: CMakeLists.txt
sources/tree_walk_interpreter/src/: main.cpp  scanner.cpp  scanner.hpp  source_location.cpp  source_location.hpp  token.hpp  token_type.hpp
sources/utilities/: CMakeLists.txt
sources/utilities/include/crafting_interpreters/utilities/: printable.hpp
sources/utilities/src/: foo.cpp
sources/utilities/test/: CMakeLists.txt  t_foo.cpp
tools/grammar_generator/: CMakeLists.txt
tools/grammar_generator/src/: grammar.cpp  main.cpp  node.cpp  node.hpp  parser.cpp  tree.cpp  utils.hpp
tools/grammar_generator/tree-sitter-grammar/: .gitattributes  CMakeLists.txt  grammar.js  tree-sitter.json
tools/grammar_generator/tree-sitter-grammar/src/: grammar.json  node-types.json  parser.c
