[package]
name = "grammar_grammar_generator_v5"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
convert_case = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[lints.clippy]
pedantic = "warn"
style = "warn"
suspicious = "warn"
correctness = "warn"
complexity = "warn"
perf = "warn"
