[workspace]
members = [ "cpp_generator","model", "test_main"]
resolver = "2"

[workspace.lints.clippy]
missing-errors-doc = { level = "allow", priority = 1 }
pedantic = "warn"
style = "warn"
suspicious = "warn"
correctness = "warn"
complexity = "warn"
perf = "warn"

[workspace.dependencies]
anyhow = "1.0.95"
convert_case = "0.6.0"
clap = { version = "4.5.23", features = ["derive"] }
tera = "1.20.0"
serde = { version = "1.0.217", features = ["derive"] }

model = { version = "0.1.0", path = "./model" }
cpp_generator = { version = "0.1.0", path = "./cpp_generator" }
